--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,9 @@ set-option -g window-status-format "[#I #W #F]"
 set-option -g window-status-current-format "#[fg=white,bg=green][#I #W #F]#[default]"
 # Right
 set-option -g status-right-length 150
-set-option -g status-right '#[fg=white,bg=blue,bold]%Y/%m/%d(%a) %H:%M#[default]'
+# set-option -g status-right '#[fg=white,bg=blue,bold]%Y/%m/%d(%a) %H:%M#[default]'
+set-option -g status-utf8 on
+set -g status-right '#(rainbarf)'
 
 # ==== Pane active border
 set-option -g pane-active-border-fg black
