--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,8 @@ set-option -g set-titles-string "tmux.#I.#W"
 
 # ==== Status line
 # Update interval
-set-option -g status-interval 5
+#set-option -g status-interval 5
+set -g status-interval 0
 # Left
 set-option -g status-left-length 30
 set-option -g status-left '#[fg=yellow]#h[#S:#I.#P] #[default]'
@@ -33,10 +34,10 @@ set-option -g status-left '#[fg=yellow]#h[#S:#I.#P] #[default]'
 set-option -g window-status-format "[#I #W #F]"
 set-option -g window-status-current-format "#[fg=white,bg=green][#I #W #F]#[default]"
 # Right
-set-option -g status-right-length 150
+#set-option -g status-right-length 150
 # set-option -g status-right '#[fg=white,bg=blue,bold]%Y/%m/%d(%a) %H:%M#[default]'
-set-option -g status-utf8 on
-set -g status-right '#(rainbarf)'
+#set-option -g status-utf8 on
+#set -g status-right '#(rainbarf)'
 
 # ==== Pane active border
 set-option -g pane-active-border-fg black
