--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,8 @@ set-option -g window-status-current-format "#[fg=white,bg=green][#I #W #F]#[defa
 #set-option -g status-utf8 on
 #set -g status-right '#(rainbarf)'
 
+set-option -g status-right ''
+
 # ==== Pane active border
 set-option -g pane-active-border-fg black
 set-option -g pane-active-border-bg blue
