--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,11 +47,11 @@ set-option -g pane-active-border-bg blue
 
 set -g default-terminal "xterm"
 
-#set-option -g default-shell /bin/zsh
-set-option -g default-shell /usr/local/bin/zsh
+#set-option -g default-shell /usr/local/bin/zsh
+set -g default-shell $SHELL
 
-set -g mode-mouse on
+#set -g mode-mouse on
 
-#set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash...
+# set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash...
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+# bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
