--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ unbind C-b
 set -g prefix C-t
 
 # Allow UTF-8
-set-window-option -g utf8 on
+#set-window-option -g utf8 on
 
 # ==== Key mappings
 # Vi binding
@@ -54,4 +54,4 @@ set -g default-shell $SHELL
 
 set-option -g default-command "reattach-to-user-namespace -l zsh" # or bash...
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-# bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+#bind C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
